2009-04-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/libc_pthread_init.c (__libc_pthread_init):
	Avoid warning by using may_alias attribute on ptrhack.

2009-04-22  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10090]
	* pthread_attr_setschedparam.c (__pthread_attr_setschedparam):
	Check policy and priority for validity.
	Patch mostly by Zhang Xiliang <zhangxiliang@cn.fujitsu.com>.

2009-03-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S
	(__pthread_cond_timedwait): Change to use cfi directives instead of
	hand-coded unwind sections.

2009-03-10  Ulrich Drepper  <drepper@redhat.com>

	* init.c (nptl_freeres): Compile only for SHARED.

2009-03-09  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/lowlevellock.h: Define
	FUTEX_WAIT_BITSET, FUTEX_WAKE_BITSET, FUTEX_CLOCK_REALTIME and
	FUTEX_BITSET_MATCH_ANY.

2009-02-27  Roland McGrath  <roland@redhat.com>

	* init.c (__nptl_initial_report_events): Mark __attribute_used__.
	* pthread_create.c (__nptl_threads_events, __nptl_last_event): Likewise.

2009-02-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define
	_POSIX_THREAD_ROBUST_PRIO_INHERIT and
	_POSIX_THREAD_ROBUST_PRIO_PROTECT.  Reset value of macros from
	200112L to 200809L.

2009-02-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h: The robust mutex functions are in
	POSIX 2008.

2009-02-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h (_BITS_POSIX_OPT_H):
	Unify name of include protector macro.

2009-02-14  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>

	* sysdeps/unix/sysv/linux/sh/lowlevellock.S: Define
	LOAD_FUTEX_WAIT_ABS even if (FUTEX_WAIT == 0).

2009-01-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/unwind-forcedunwind.c: Encrypt all function
	pointer variables.

	* allocatestack.c (__free_stacks): Renamed from free_stacks.